[package]
name = "fc-rpc"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
ethereum = { version = "0.12.0", features = ["with-codec"] }
ethereum-types = "0.13"
evm = { version = "0.35.0", default-features = false }
futures = { version = "0.3.1", features = ["compat"] }
hex = "0.4"
libsecp256k1 = "0.7"
log = "0.4.8"
lru = "0.7.0"
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-pubsub = "18.0"
prometheus = { version = "0.13.0", default-features = false }
rand = "0.8"
rlp = "0.5"
tokio = { version = "1.14", features = [ "sync" ] }

codec = { package = "parity-scale-codec", version = "3.0.0" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint",  git = "https://github.com/chainx-org/substrate", branch = "branch=polkadot-v0.9.18-fix" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/chainx-org/substrate", branch = "branch=polkadot-v0.9.18-fix" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/chainx-org/substrate", branch = "branch=polkadot-v0.9.18-fix" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/chainx-org/substrate", branch = "branch=polkadot-v0.9.18-fix" }
sp-core = { version = "6.0.0", git = "https://github.com/chainx-org/substrate", branch = "branch=polkadot-v0.9.18-fix" }
sp-io = { version = "6.0.0",  git = "https://github.com/chainx-org/substrate", branch = "branch=polkadot-v0.9.18-fix" }
sp-runtime = { version = "6.0.0", git = "https://github.com/chainx-org/substrate", branch = "branch=polkadot-v0.9.18-fix" }
sp-storage = { version = "6.0.0", git = "https://github.com/chainx-org/substrate", branch = "branch=polkadot-v0.9.18-fix" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/chainx-org/substrate", branch = "branch=polkadot-v0.9.18-fix" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/chainx-org/substrate", branch = "branch=polkadot-v0.9.18-fix" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/chainx-org/substrate", branch = "branch=polkadot-v0.9.18-fix" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/chainx-org/substrate", branch = "branch=polkadot-v0.9.18-fix" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/chainx-org/substrate", branch = "branch=polkadot-v0.9.18-fix" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/chainx-org/substrate", branch = "branch=polkadot-v0.9.18-fix" }

fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage" }
fc-db = { version = "2.0.0-dev", path = "../db" }
fc-rpc-core = { version = "1.1.0-dev", path = "../rpc-core" }
pallet-ethereum = { version = "4.0.0-dev", path = "../../frame/ethereum" }

[features]
rpc_binary_search_estimate = []
chainx-adaptor = []
